# bingbuildings

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker_env  environment.yml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: collection.json  item.json  pc-collection.json
scripts/: format  make_data.py  test
src/stactools/bingbuildings/: __init__.py  commands.py  stac.py
src/stactools/msbuildings/: __init__.py  commands.py  data.json  geoparquet.py  stac.py
tests/: test_commands.py  test_geoparquet.py  test_module.py  test_stac.py
tests/data/: no_metadata.parquet
