[metadata]
name = stactools-msbuildings
version = attr: stactools.msbuildings.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/msbuildings
project_urls =
    Issues = https://github.com/stactools-packages/msbuildings/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1
    stac-table @ git+https://github.com/TomAugspurger/stac-table
    dask-geopandas

[options.packages.find]
where = src

[options.package_data]
* = *.json